--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -9,6 +9,7 @@
     <link href="https://unpkg.com/ionicons@4.3.0/dist/css/ionicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./vendors/css/Grid.css">
     <link rel="stylesheet" href="./resources/css/style.css">
+    <link rel="stylesheet" href="./resources/css/queries.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet"> 
 </head>
 <body>
