--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -14,9 +14,10 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav >
             <div class="row">
                 <img src="./resources/img/logo-white.png" alt="Omnifood logo" class="logo">
+                <img src="./resources/img/logo.png" alt="Omnifood logo" class="logo-black">
                 
                 <ul class="main-nav">
                     <li><a href="#">Food Delivery</a></li>
@@ -34,7 +35,7 @@
     </header>
 
 
-    <section class="section-features">
+    <section class="section-features js-section-feature">
         <div class="row">
             <h2>Get food fast &ndash; not fast food.</h2>
             <p class="long-copy">
@@ -413,10 +414,12 @@
             </p>
         </div>
     </footer>
-</body>
 
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/respond@0.9.0/main.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+<script src="./resources/js/script.js"></script>
+</body>
 </html>
