--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -14,28 +14,28 @@
 </head>
 <body>
     <header>
-        <nav >
+        <nav>
             <div class="row">
                 <img src="./resources/img/logo-white.png" alt="Omnifood logo" class="logo">
                 <img src="./resources/img/logo.png" alt="Omnifood logo" class="logo-black">
                 
                 <ul class="main-nav">
-                    <li><a href="#">Food Delivery</a></li>
-                    <li><a href="#">How it works</a></li>
-                    <li><a href="#">Our cities</a></li>
-                    <li><a href="#">Sign up</a></li>
+                    <li><a href="#features">Food Delivery</a></li>
+                    <li><a href="#works">How it works</a></li>
+                    <li><a href="#cities">Our cities</a></li>
+                    <li><a href="#plans">Sign up</a></li>
                 </ul>
             </div>
         </nav>
         <div class="hero-text-box">
             <h1>Goodbye junk food.<br>Hello super healthy meals.</h1>
-            <a href="#" class="btn btn-full">I'm hungry</a>
-            <a href="#" class="btn btn-ghost">Show me more</a> 
+            <a href="#" class="btn btn-full js--scroll-to-plans">I'm hungry</a>
+            <a href="#" class="btn btn-ghost js--scroll-to-start">Show me more</a> 
         </div>
     </header>
 
 
-    <section class="section-features js-section-feature">
+    <section class="section-features js--section-features" id="features">
         <div class="row">
             <h2>Get food fast &ndash; not fast food.</h2>
             <p class="long-copy">
@@ -114,7 +114,7 @@
             </ul>
     </section>
 
-    <section class="section-steps">
+    <section class="section-steps" id="works">
         <div class="row">
             <h2>How it works &ndash; Simple as 1, 2, 3</h2>
         </div>
@@ -142,7 +142,7 @@
         </div>
     </section>
     
-    <section class="section-cities clearfix">
+    <section class="section-cities clearfix" id="cities">
         <div class="row">
             <h2>We're currently in these cities</h2>
         </div>
@@ -255,7 +255,7 @@
 
     </section>
 
-    <section class="section-plans">
+    <section class="section-plans js--section-plans" id="plans">
         <div class="row">
             <h2>Start eating healthy today</h2>
         </div>
@@ -416,8 +416,8 @@
     </footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/respond@0.9.0/main.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
 <script src="./resources/js/script.js"></script>
